--- a/app/node/Dockerfile.local
+++ b/app/node/Dockerfile.local
@@ -1,6 +1,13 @@
 FROM node:20.0.0
 WORKDIR /node
 RUN mkdir -p images/user-icon
+ENV DD_AGENT_HOST="datadog"
+ENV DD_TRACE_AGENT_HOSTNAME="datadog"
+ENV DD_TRACE_AGENT_PORT="8126"
+ENV DD_LOGS_INJECTION=true
+LABEL "com.datadoghq.ad.check_names"='["mysql"]'
+LABEL "com.datadoghq.ad.init_configs"='[{}]'
+LABEL "com.datadoghq.ad.instances"='[{"server": "%%host%%", "username": "datadog","password": "datadog"}]'
 COPY . .
 RUN --mount=type=cache,target=/usr/local/share/.cache/yarn/v6 \ 
 yarn install --frozen-lockfile
