--- a/app/node/package.json
+++ b/app/node/package.json
@@ -11,7 +11,9 @@
     "dev": "nodemon src/index.ts"
   },
   "dependencies": {
+    "connect-datadog": "^0.0.9",
     "cookie-parser": "^1.4.6",
+    "dd-trace": "^4.12.0",
     "express": "^4.18.2",
     "mysql2": "^3.2.4",
     "uuid": "^9.0.0"
