--- a/app/node/Dockerfile
+++ b/app/node/Dockerfile
@@ -13,6 +13,7 @@ ENV DD_AGENT_HOST="datadog"
 ENV DD_TRACE_AGENT_HOSTNAME="datadog"
 ENV DD_TRACE_AGENT_PORT="8126"
 ENV DD_LOGS_INJECTION=true
+ENV DD_ENV="prd"
 LABEL "com.datadoghq.ad.check_names"='["mysql"]'
 LABEL "com.datadoghq.ad.init_configs"='[{}]'
 LABEL "com.datadoghq.ad.instances"='[{"server": "%%host%%", "username": "datadog","password": "datadog"}]'
