feat: Nginxの設定見直し

--- a/app/nginx/default.conf
+++ b/app/nginx/default.conf
@@ -1,5 +1,11 @@
+worker_processes auto;
+worker_rlimit_nofile  8192;
+events {
+  worker_connections  2048;
+}
+
 server {
-  listen 443 ssl;
+  listen 443 ssl http2;
   ssl_certificate     /etc/nginx/tls/fullchain.pem;
   ssl_certificate_key /etc/nginx/tls/privkey.pem;
 
